--- a/pom.xml
+++ b/pom.xml
@@ -1949,6 +1949,11 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.owasp.esapi</groupId>
+                <artifactId>esapi</artifactId>
+                <version>${esapi.version}</version>
+            </dependency>
 
             <!-- Logging -->
             <dependency>
