KE-40063 fix snyk vulnerabilities, exclude xalan

--- a/pom.xml
+++ b/pom.xml
@@ -2306,6 +2306,10 @@
                         <groupId>org.bouncycastle</groupId>
                         <artifactId>bcprov-jdk15on</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>xalan</groupId>
+                        <artifactId>xalan</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
