--- a/src/server/pom.xml
+++ b/src/server/pom.xml
@@ -445,6 +445,7 @@
                                 net.sf.py4j,
                                 com.h2database,
                                 jdk.tools,
+                                io.netty
                             </excludeGroupIds>
                             <excludeArtifactIds>
                                 unused
